tests/core/ill-typed/bad-logic-not-1.stella
language core;

fn not_fn(m : Nat) -> Bool {
    return not (n);
}

fn main(n : Nat) -> Bool {
  return not_fn(n);
}
